--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,12 +2,12 @@
 nodaemon=true
 logfile=/var/log/supervisord.log
 
-[program:fluxbox]
+[program:openbox]
 command=/usr/bin/openbox-session
 autorestart=true
-stdout_logfile=/var/log/fluxbox_s.logs
+stdout_logfile=/var/log/openbox_s.logs
 stdout_logfile_maxbytes=0
-stderr_logfile=/var/log/fluxbox_e.logs
+stderr_logfile=/var/log/openbox_e.logs
 stderr_logfile_maxbytes=0
 
 [program:xvfb]
